# rs-practice-axum

./: Cargo.toml  README.md
assets2/: index.html
src/: main.rs
