[package]
name = "rs-practice-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
askama = "0.12.1"
bb8 = "0.8"
bb8-postgres = "0.8"
tokio-postgres = "0.7"
